# Hello_Rust_Web

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md  SDK_INTEGRATION_SUMMARY.md
config/: default.toml  development.toml  production.toml
k6/: script.js
src/: app_state.rs  config.rs  main.rs
src/api/: mod.rs
src/api/employee/: mod.rs
src/api/employee/model/: user.rs
src/api/employee/router/: index.rs
src/api/employee/services/users/: mod.rs
src/core/: error.rs  mod.rs  otel.rs
src/core/layer/: auth.rs  mod.rs  request_log.rs
src/data_source/postgres/: mod.rs
src/data_source/postgres/users/: mod.rs
src/middleware/: custom_auth.rs  custom_logger.rs  mod.rs
