[package]
name = "Hello_Rust_Web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"]}
tokio = {version = "1.48.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tower = "0.5.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
chrono = {version =  "0.4.42", features = ["serde"]}
serde_json = "1.0.145"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"
tower-http = { version = "0.6.6", features = ["trace", "catch-panic"] }
config = {version = "0.15.18", features = ["toml"] }